--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <html>
-	<h1>	Site is currently undergoing maintenance. </h1>
+<head>
+	<link rel="stylesheet" style="text/css" href="css/styles.css">
+</head>
+<body>
+	<div>
+		<h1>	Site is currently undergoing maintenance. </h1>
+	</div>
+	<div class="goat">
+	</div>
+	
 	<hr>
+</body>
 </html>
