--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 	</div>
 	<div class="goat">
 	</div>
-	
-	<hr>
+	<div class="about">
+		<h2> About Me </h2>
+		<div class="main">
+
+			<div class="hockey">
+				<h3> Hockey Player </h3>
+			</div>
+			<div class="tile nano">
+				<h3> Nanotechnology Engineer </h3>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
