background img, added about text, added project section

--- a/index.html
+++ b/index.html
@@ -4,19 +4,29 @@
 </head>
 <body>
 	<div>
-		<h1>	Site is currently undergoing maintenance. </h1>
-	</div>
-	<div class="goat">
+		<h1> Mitchell Smith </h1>
 	</div>
 	<div class="about">
-		<h2> About Me </h2>
+		<h2 class="header"> About Me </h2>
 		<div class="main">
-
-			<div class="hockey">
-				<h3> Hockey Player </h3>
+			<p>
+				Curious about most things. Lover of classic novels, epic sci-fi and historical fiction. Appreciative of a good beer. <br><br>
+				Former varsity hockey player and member of the 2018 Nanotechnology Engineering class at the University of Waterloo. <br><br>
+				Keep scrolling and you'll see a list of my current and past projects.<br><br>
+				The photo is from Lake Walensee in Switzerland and is by far the best I've ever taken. 
+			</p>
+		</div>
+	</div>
+	<div class="gap">
+	</div>
+	<div class="projects">
+		<h2 class="header"> Projects </h2>
+		<div class="main">
+			<div class="music-player">
+				<h3> Youtube Music Player </h3>
 			</div>
-			<div class="tile nano">
-				<h3> Nanotechnology Engineer </h3>
+			<div class="s4h">
+				<h3> Searching4Hope </h3>
 			</div>
 		</div>
 	</div>
