updated broswer title

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<title> Mitchell Smith </title>
 	<link rel="stylesheet" style="text/css" href="css/styles.css">
 </head>
 <body>
@@ -29,6 +30,8 @@
 				<h3> Searching4Hope </h3>
 			</div>
 		</div>
+	</div>
+	<div class="gap">
 	</div>
 </body>
 </html>
