added s4h project tile

--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
 	<div class="projects">
 		<h2 class="header"> Projects </h2>
 		<div class="main">
-			<div class="music-player">
+			<div class="tiles music-player">
 				<h3> Youtube Music Player </h3>
 			</div>
-			<div class="s4h">
+			<div class="tiles s4h">
 				<h3> Searching4Hope </h3>
+			</div>
+			<div class="tiles hockey">
+				<h3> The Institute </h3>
 			</div>
 		</div>
 	</div>
